# delta-with-duck-db

./: .gitignore  README.md  dev.ipynb  pyproject.toml
src/: fake_dataset.py
